--- a/src/app/question/question.component.css
+++ b/src/app/question/question.component.css
@@ -2,6 +2,12 @@
   margin-top: 20px;
 }
 
+.question-container {
+  height: 300px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .question-form textarea {
   width: 100%;
   box-sizing: border-box;         /* For IE and modern versions of Chrome */
